--- a/style.css
+++ b/style.css
@@ -983,3 +983,13 @@ object {
 .gallery-caption {
 	display: block;
 }
+
+
+.container {
+    background: #222;
+    width: 50%;
+    margin: 0 auto 0 auto;
+    padding: 100px;
+    color:#fff;
+}
+
